--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 spring.datasource.url: jdbc:h2:file:./camunda-h2-database
+spring.jpa.hibernate.ddl-auto: create-drop
 
 camunda.bpm.admin-user:
   id: admin
